style:fixed some style error in dark mode

--- a/assets/scss/modules/_db.scss
+++ b/assets/scss/modules/_db.scss
@@ -35,7 +35,7 @@
         object-fit: cover;
         border-radius: 4px;
         &:hover {
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            box-shadow: 0 0 10px var(--farallon-border-color);
         }
     }
 
@@ -45,14 +45,14 @@
         line-height: 1.4;
         a {
             &:hover {
-                color: var(--main-hover-color);
+                color: var(--farallon-hover-color);
                 text-decoration: underline;
             }
         }
     }
 
     &--genreItem {
-        background: #f2f4f6;
+        background: var(--farallon-background-gray);
         font-size: 12px;
         padding: 5px 12px;
         border-radius: 4px;
@@ -61,12 +61,12 @@
         line-height: 1.4;
         cursor: pointer;
         &.is-active {
-            background-color: var(--main-bg-color);
-            color: #fff;
+            background-color: var(--farallon-main-color);
+            color: var(--farallon-background-white);
         }
         &:hover {
-            background-color: var(--main-hover-color);
-            color: #fff;
+            background-color: var(--farallon-hover-color);
+            color: var(--farallon-background-white);
         }
     }
 
@@ -111,7 +111,7 @@
             margin-bottom: 2px;
             font-weight: 900;
             &:after {
-                content: '';
+                content: "";
                 border-top-left-radius: 0;
                 border-bottom-left-radius: 0;
                 right: 0;
@@ -141,7 +141,7 @@
     margin-bottom: 2px;
     font-weight: 900;
     &:after {
-        content: '';
+        content: "";
         border-top-left-radius: 0;
         border-bottom-left-radius: 0;
         right: 0;
@@ -162,7 +162,7 @@
     border: 1px solid #eee;
     border-radius: 4px;
     &:hover {
-        box-shadow: 0 3px 12px rgba(0, 0, 0, 0.05);
+        box-shadow: 0 3px 12px var(--farallon-border-color-light);
     }
 
     .doulist-subject {
@@ -185,7 +185,7 @@
             margin-bottom: 2px;
             font-weight: 900;
             &:after {
-                content: '';
+                content: "";
                 border-top-left-radius: 0;
                 border-bottom-left-radius: 0;
                 left: 0;
@@ -229,7 +229,7 @@
                 height: 16px;
                 width: 80px;
                 background-repeat: repeat;
-                background-image: url('../images/star.svg');
+                background-image: url("../images/star.svg");
                 background-size: auto 100%;
                 margin-right: 5px;
             }
@@ -241,7 +241,7 @@
                 height: 16px;
                 overflow: hidden;
                 background-repeat: repeat;
-                background-image: url('../images/star-fill.svg');
+                background-image: url("../images/star-fill.svg");
                 background-size: auto 100%;
             }
         }
@@ -262,18 +262,18 @@
 .db--date {
     position: relative;
     font-size: 20px;
-    color: rgba(0, 0, 0, 0.6);
+    color: var(--farallon-text-light);
     font-weight: 900;
     line-height: 1;
     &:before {
-        content: '';
+        content: "";
         position: absolute;
         top: 0.5em;
         bottom: -2px;
         left: -10px;
         width: 3.4em;
         z-index: -1;
-        background: var(--main-hover-color);
+        background: var(--farallon-hover-color);
         opacity: 0.3;
         transform: skew(-35deg);
         transition: opacity 0.2s ease;
@@ -293,7 +293,7 @@
     display: flex;
     align-items: center;
     padding: 15px 0;
-    border-bottom: 1px dotted #eee;
+    border-bottom: 1px dotted var(--farallon-border-color);
     font-size: 14px;
     color: rgba(0, 0, 0, 0.55);
     &:last-child {
@@ -315,7 +315,7 @@
             height: 16px;
             width: 80px;
             background-repeat: repeat;
-            background-image: url('../images/star.svg');
+            background-image: url("../images/star.svg");
             background-size: auto 100%;
             margin-right: 5px;
         }
@@ -327,7 +327,7 @@
             height: 16px;
             overflow: hidden;
             background-repeat: repeat;
-            background-image: url('../images/star-fill.svg');
+            background-image: url("../images/star-fill.svg");
             background-size: auto 100%;
         }
     }
@@ -357,7 +357,7 @@
 
     &__month {
         font-size: 14px;
-        color: rgba(0, 0, 0, 0.6);
+        color: var(--farallon-text-light);
         font-weight: 900;
     }
 }
@@ -395,7 +395,7 @@
     &--subtitle {
         font-size: 18px;
         font-weight: 200;
-        color: var(--text-gray-light);
+        color: var(--farallon-text-light);
     }
 }
 
@@ -403,7 +403,7 @@
     &--item {
         padding: 25px 0;
         font-size: 20px;
-        border-bottom: 1px solid rgba(0, 0, 0, 0.05);
+        border-bottom: 1px solid var(--farallon-border-color-light);
         &:last-child {
             border-bottom: 0;
         }
@@ -418,8 +418,8 @@
         align-items: center;
         margin-top: 20px;
         a {
-            border: 1px solid var(--main-bg-color);
-            color: var(--main-bg-color);
+            border: 1px solid var(--farallon-main-color);
+            color: var(--farallon-main-color);
             line-height: 1.2;
             font-size: 12px;
             padding: 3px 12px;
@@ -427,9 +427,9 @@
             margin-right: 20px;
             font-weight: bold;
             &:hover {
-                border-color: var(--main-hover-color);
-                background-color: var(--main-hover-color);
-                color: #fff;
+                border-color: var(--farallon-hover-color);
+                background-color: var(--farallon-hover-color);
+                color: var(--farallon-background-white);
             }
         }
     }
@@ -439,19 +439,19 @@
     &--item {
         padding: 15px 0;
         font-size: 20px;
-        border-bottom: 1px solid rgba(0, 0, 0, 0.05);
+        border-bottom: 1px solid var(--farallon-border-color-light);
         &:last-child {
             border-bottom: 0;
         }
         a {
             &:hover {
-                color: var(--main-hover-color);
+                color: var(--farallon-main-color);
                 text-decoration: underline;
             }
         }
         .desc {
             font-size: 14px;
-            color: var(--text-gray-light);
+            color: var(--faraallon-text-gray);
         }
     }
 }
