--- a/assets/scss/templates/about.scss
+++ b/assets/scss/templates/about.scss
@@ -14,7 +14,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    background: #f4f4f6;
+    background: var(--farallon-background-gray);
     border-radius: 10px;
     padding: 30px 0 0;
     flex-direction: column;
@@ -25,7 +25,7 @@
         transition: 0.5s;
     }
     &:hover {
-        background: #eeeef0;
+        //background: #eeeef0;
         .img-spacer {
             transform: translate3d(0, -5px, 0);
         }
@@ -39,12 +39,12 @@
 .good--name {
     font-size: 14px;
     padding-bottom: 10px;
-    color: var(--text-main-color);
+    color: var(--farallon-text-color);
     margin-top: 10px;
     line-height: 1.4;
     width: 92%;
     .brand {
-        color: var(--text-gray-lightest);
+        color: var(--farallon-text-gray-lightest);
     }
 }
 
